feat: optimize token store